--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,27 +1,1 @@
-<h1>Listing teams</h1>
-
-<table>
-  <tr>
-    <th>Player1</th>
-    <th>Player2</th>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @teams.each do |team| %>
-  <tr>
-    <td><%= team.player1_id %></td>
-    <td><%= team.player2 %></td>
-    <td><%= team.name %></td>
-    <td><%= link_to 'Show', team %></td>
-    <td><%= link_to 'Edit', edit_team_path(team) %></td>
-    <td><%= link_to 'Destroy', team, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Team', new_team_path %>
+<%= render 'list_teams' %>
